--- a/RxJava系列教程/10.RxJava 教程第三部分：驯服数据流之 避免 monad.md
+++ b/RxJava系列教程/10.RxJava 教程第三部分：驯服数据流之 避免 monad.md
@@ -158,7 +158,7 @@ Caught: java.lang.IllegalArgumentException: Sequence contains too many elements
 public java.lang.Iterable<T> toIterable()
 ```
 
-![RxJava](http://img.blog.csdn.net/20160705230339115)
+![RxJava](images/monad_01.png)
 
 这种实现方式，把 Observable 所发射的所有数据给收集起来并缓存到一个集合中。由于缓存的存在，所以不会丢失数据。一单有下一个数据 next() 函数就返回。否则的话就阻塞到数据可用。注意 上图画的有点问题，看起来好像等 Observable 发射完后来返回集合。
 
@@ -189,7 +189,7 @@ for (long l : iterable) {
 public java.lang.Iterable<T> next()
 ```
 
-![RxJava](http://img.blog.csdn.net/20160705230447932)
+![RxJava](images/monad_02.png)
 
 这种实现数据没有缓存。 iterator 总是等待下一个数据并立刻返回。
 
@@ -265,7 +265,7 @@ Emitted: 4
 public java.lang.Iterable<T> mostRecent(T initialValue)
 ```
 
-![RxJava](http://img.blog.csdn.net/20160705230641931)
+![RxJava](images/monad_03.png)
 
 mostRecent 返回的 iterator 从来不会阻塞。他会缓存最近一个值，如果消费者比 生产者处理的速度慢，则有数据会丢失。和 latest 不一样的是， 只要消费者需要数据，则缓存的数据就会直接返回。这样，如果消费者处理数据的速度快，则消费者就会看到重复的数据。所以为了实现不阻塞的操作，该函数需要一个初始化的值。如果 Observable 还没有发射数据，消费者这个时候看到的就是这个初始化的值。
 
