--- a/RxJava系列教程/11.RxJava 教程第三部分：驯服数据流之 高级错误处理.md
+++ b/RxJava系列教程/11.RxJava 教程第三部分：驯服数据流之 高级错误处理.md
@@ -1,3 +1,5 @@
+# 11. 驯服数据流之高级错误处理
+
 在实际项目代码中可能出现各种各样的异常情况，并不是每一个异常都需要告诉上层代码的。在传统的 Java 中，你可以捕获一个异常，然后决定是自己处理该异常还是再次抛出去。同样，在 RxJava 中，你也可以根据异常来执行不同的逻辑而无需结束 Observable，也不再强迫 Observer 处理所有情况。
 
 ## Resume
@@ -6,7 +8,7 @@
 
 onErrorReturn 操作函数的功能是：当发生错误的时候，发射一个默认值然后结束数据流。所以 Subscriber 看不到异常信息，看到的是正常的数据流结束状态。
 
-![RxJava](http://img.blog.csdn.net/20160706095925770)
+![RxJava](images/高级错误处理_01.png)
 
 ```java
 Observable<String> values = Observable.create(o -> {
@@ -39,7 +41,7 @@ public final Observable<T> onErrorResumeNext(
     Func1<java.lang.Throwable,? extends Observable<? extends T>> resumeFunction)1234
 ```
 
-![RxJava](http://img.blog.csdn.net/20160706100242649)
+![RxJava](images/高级错误处理_02.png)
 
 第二个重载的函数可以根据错误的信息来返回不同的 Observable。
 
@@ -96,7 +98,7 @@ public final Observable<T> retry()
 public final Observable<T> retry(long count)12
 ```
 
-![RxJava](http://img.blog.csdn.net/20160706103843065)
+![RxJava](images/高级错误处理_03.png)
 
 没有参数的 retry() 函数会一直重试，直到没有异常发生为止。而带有参数的 retry(n) 函数会重试 N 次， 如果 N 次后还是失败，则不再重试了，数据流发射一个异常信息并结束。
 
