--- a/RxJava系列教程/12.RxJava 教程第三部分：驯服数据流之 组合数据流.md
+++ b/RxJava系列教程/12.RxJava 教程第三部分：驯服数据流之 组合数据流.md
@@ -1,4 +1,4 @@
-## 组合数据流
+## 12. 驯服数据流之组合数据流
 
 到目前为止我们介绍了如何创建数据流以及如何把数据流中的数据转换成我们需要的数据。然而，大部分应用都需要处理多个数据源的数据。需要一种把多个数据源组合一起的方法。在前面的介绍中，也看到了一些数据流会使用多个 Observable。本节介绍如何把多个数据源的数据组合为一个数据源的操作函数。
 
