--- a/RxJava系列教程/17.RxJava 教程第四部分：并发 之线程调度.md
+++ b/RxJava系列教程/17.RxJava 教程第四部分：并发 之线程调度.md
@@ -1,8 +1,10 @@
+## 17.RxJava 教程第四部分：并发 之线程调度
+
 由于 Rx 目标是用在异步系统上并且 Rx 支持多线程处理，所以很多 Rx 开发者认为默认情况下 Rx 就是多线程的。 其实实际情况不是这样的，Rx 默认是单线程的。
 
 除非你明确的指定线程，否则所有 onNext/onError/onCompleted 以及各个操作函数的调用都是在同一个线程中完成的。例如下面的示例：
 
-```
+```java
 final BehaviorSubject<Integer> subject = BehaviorSubject.create();
 subject.subscribe(i -> {
     System.out.println("Received " + i + " on " + Thread.currentThread().getId());
@@ -18,7 +20,7 @@ Runnable r = () -> {
 
 r.run(); // Execute on main thread
 new Thread(r).start();
-new Thread(r).start();12345678910111213141516
+new Thread(r).start();
 ```
 
 结果：
@@ -29,7 +31,7 @@ Received 1 on 1
 onNext(2) on 11
 Received 2 on 11
 onNext(3) on 12
-Received 3 on 12123456
+Received 3 on
 ```
 
 上面在三个线程中分别调用 subject 的onNext 函数。和 Runnable 中的线程是同一个线程。不管用多少个操作函数串联调用，结果都是同一个线程。
@@ -38,9 +40,9 @@ Received 3 on 12123456
 
 subscribeOn 和 observeOn 分别用来控制 subscription 的调用线程和 接受事件通知（Observer 的 onNext/onError/onCompleted 函数）的线程。
 
-```
+```java
 public final Observable<T> observeOn(Scheduler scheduler)
-public final Observable<T> subscribeOn(Scheduler scheduler)12
+public final Observable<T> subscribeOn(Scheduler scheduler)
 ```
 
 在Rx 中你并不直接和 线程 打交道，而是通过 Scheduler 来处理多线程。
@@ -49,7 +51,7 @@ public final Observable<T> subscribeOn(Scheduler scheduler)12
 
 subscribeOn 用来指定 Observable.create 中的代码在那个 Scheduler 中执行。即使你没有调用 create 函数，但是内部也有一个 create 实现。例如：
 
-```
+```java
 System.out.println("Main: " + Thread.currentThread().getId());
 
 Observable.create(o -> {
@@ -63,7 +65,7 @@ Observable.create(o -> {
         System.out.println("Received " + i + " on " + Thread.currentThread().getId());
     });
 
-System.out.println("Finished main: " + Thread.currentThread().getId());1234567891011121314
+System.out.println("Finished main: " + Thread.currentThread().getId());
 ```
 
 结果：
@@ -73,7 +75,7 @@ Main: 1
 Created on 1
 Received 1 on 1
 Received 2 on 1
-Finished main: 112345
+Finished main: 1
 ```
 
 可以看到上面的代码是在同一个线程中执行，并且是按循序执行的。subscribe 执行完后（包括create 函数里面的 Lambda 表达式的代码）才继续执行后面的代码。
@@ -85,14 +87,14 @@ Main: 1
 Finished main: 1
 Created on 11
 Received 1 on 11
-Received 2 on 1112345
+Received 2 on 11
 ```
 
 这样 create 里面的 Lambda 表达式代码将会在 Schedulers.newThread() 返回的线程中执行。subscribe 不再是阻塞的了。后面的代码可以立即执行，而不用等待 subscribe 返回。
 
 有些 Observable 内部会使用它们自己创建的线程。例如 Observable.interval 就是异步的。这种情况下，无需指定新的线程。
 
-```
+```java
 System.out.println("Main: " + Thread.currentThread().getId());
 
 Observable.interval(100, TimeUnit.MILLISECONDS)
@@ -100,7 +102,7 @@ Observable.interval(100, TimeUnit.MILLISECONDS)
         System.out.println("Received " + i + " on " + Thread.currentThread().getId());
     });
 
-System.out.println("Finished main: " + Thread.currentThread().getId());12345678
+System.out.println("Finished main: " + Thread.currentThread().getId());
 ```
 
 结果：
@@ -110,14 +112,14 @@ Main: 1
 Finished main: 1
 Received 0 on 11
 Received 1 on 11
-Received 2 on 1112345
+Received 2 on 11
 ```
 
 ### observeOn
 
 observeOn 控制数据流的另外一端。你的 observer 如何收到事件。也就是在那个线程中回调 observer 的 onNext/onError/onCompleted 函数。
 
-```
+```java
 Observable.create(o -> {
         System.out.println("Created on " + Thread.currentThread().getId());
         o.onNext(1);
@@ -126,7 +128,7 @@ Observable.create(o -> {
     })
     .observeOn(Schedulers.newThread())
     .subscribe(i ->
-        System.out.println("Received " + i + " on " + Thread.currentThread().getId()));123456789
+        System.out.println("Received " + i + " on " + Thread.currentThread().getId()));
 ```
 
 结果：
@@ -134,24 +136,24 @@ Observable.create(o -> {
 ```
 Created on 1
 Received 1 on 13
-Received 2 on 13123
+Received 2 on 13
 ```
 
 observeOn 只影响调用该函数以后的操作函数。你可以认为 observeOn 只是拦截了数据流并且对后续的操作有作用。例如：
 
-```
+```java
 Observable.create(o -> {
         System.out.println("Created on " + Thread.currentThread().getId());
         o.onNext(1);
         o.onNext(2);
         o.onCompleted();
     })
-    .doOnNext(i -> 
+    .doOnNext(i ->
         System.out.println("Before " + i + " on " + Thread.currentThread().getId()))
     .observeOn(Schedulers.newThread())
-    .doOnNext(i -> 
+    .doOnNext(i ->
         System.out.println("After " + i + " on " + Thread.currentThread().getId()))
-    .subscribe();123456789101112
+    .subscribe();
 ```
 
 结果：
@@ -161,7 +163,7 @@ Created on 1
 Before 1 on 1
 Before 2 on 1
 After 1 on 13
-After 2 on 1312345
+After 2 on 13
 ```
 
 可以看到在遇到 observeOn 之前，所有的操作发生在一个线程，之后在另外一个线程。这样可以在 Rx 数据流中不同地方设置不同的线程。
@@ -172,7 +174,7 @@ After 2 on 1312345
 
 有些 Observable 会依赖一些资源，当该 Observable 完成后释放这些资源。如果释放资源比较耗时的话，可以通过 unsubscribeOn 来指定 释放资源代码执行的线程。
 
-```
+```java
 Observable<Object> source = Observable.using(
     () -> {
         System.out.println("Subscribed on " + Thread.currentThread().getId());
@@ -189,7 +191,7 @@ Observable<Object> source = Observable.using(
 
 source
     .unsubscribeOn(Schedulers.newThread())
-    .subscribe(System.out::println);1234567891011121314151617
+    .subscribe(System.out::println);
 ```
 
 结果：
@@ -199,7 +201,7 @@ Subscribed on 1
 Producing on 1
 1
 2
-Unubscribed on 1112345
+Unubscribed on 11
 ```
 
 ### Schedulers
@@ -227,17 +229,17 @@ Rx scheduler 的使用场景并没有限定在 Rx 中，也可以在普通 Java 
 
 Scheduler 有个 createWorker 函数，用来创建一个可以执行的任务（Scheduler.Worker）。然后可以调度该任务：
 
-```
+```java
 Scheduler.Worker worker = scheduler.createWorker();
 worker.schedule(
-    () -> System.out.println("Action"));123
+    () -> System.out.println("Action"));
 ```
 
 上面的任务被分配到其指定的线程中了。
 
 还可以重复执行任务，或者只执行一次，也可以推迟任务执行：
 
-```
+```java
 Subscription schedule(
     Action0 action,
     long delayTime,
@@ -246,10 +248,10 @@ Subscription schedulePeriodically(
     Action0 action,
     long initialDelay,
     long period,
-    java.util.concurrent.TimeUnit unit)123456789
+    java.util.concurrent.TimeUnit unit)
 ```
 
-```
+```java
 Scheduler scheduler = Schedulers.newThread();
 long start = System.currentTimeMillis();
 Scheduler.Worker worker = scheduler.createWorker();
@@ -258,14 +260,14 @@ worker.schedule(
     5, TimeUnit.SECONDS);
 worker.schedule(
     () -> System.out.println(System.currentTimeMillis()-start),
-    5, TimeUnit.SECONDS);123456789
+    5, TimeUnit.SECONDS);
 ```
 
 结果：
 
 ```
 5033
-503512
+5035
 ```
 
 上面示例中可以看到，推迟执行是从调度开始的时候计算时间的。
@@ -274,7 +276,7 @@ worker.schedule(
 
 Scheduler.Worker 继承至 Subscription。调用 unsubscribe 函数可以取消队列中的任务：
 
-```
+```java
 Scheduler scheduler = Schedulers.newThread();
 long start = System.currentTimeMillis();
 Scheduler.Worker worker = scheduler.createWorker();
@@ -286,18 +288,18 @@ worker.schedule(
     5, TimeUnit.SECONDS);
 worker.schedule(
     () -> System.out.println(System.currentTimeMillis()-start),
-    5, TimeUnit.SECONDS);123456789101112
+    5, TimeUnit.SECONDS);
 ```
 
 结果：
 
 ```
-50321
+5032
 ```
 
 第一个任务中调用了 unsubscribe，这样第二个任务被取消了。下面一个示例演示任务没有执行完，被取消的情况，会抛出一个 InterruptedException 异常：
 
-```
+```java
 Scheduler scheduler = Schedulers.newThread();
 long start = System.currentTimeMillis();
 Scheduler.Worker worker = scheduler.createWorker();
@@ -310,13 +312,13 @@ worker.schedule(() -> {
     }
 });
 Thread.sleep(500);
-worker.unsubscribe();12345678910111213
+worker.unsubscribe();
 ```
 
 结果：
 
 ```
-Action interrupted1
+Action interrupted
 ```
 
 schedule 返回的是一个 Subscription 对象，可以在该对象上调用取消操作，这样可以只取消这一个任务，而不是取消所有任务。
@@ -327,14 +329,14 @@ schedule 返回的是一个 Subscription 对象，可以在该对象上调用取
 
 ImmediateScheduler 并没有做任何线程调度。只是同步的执行任务。嵌套调用会导致任务被递归执行：
 
-```
+```java
 Scheduler scheduler = Schedulers.immediate();
 Scheduler.Worker worker = scheduler.createWorker();
 worker.schedule(() -> {
     System.out.println("Start");
     worker.schedule(() -> System.out.println("Inner"));
     System.out.println("End");
-});1234567
+});
 ```
 
 结果：
@@ -342,21 +344,21 @@ worker.schedule(() -> {
 ```
 Start
 Inner
-End123
+End
 ```
 
 ### TrampolineScheduler
 
 TrampolineScheduler 也是同步执行，但是不嵌套任务。而是把后来的任务添加到任务队列中，等前面的任务执行完了 再执行后面的。
 
-```
+```java
 Scheduler scheduler = Schedulers.trampoline();
 Scheduler.Worker worker = scheduler.createWorker();
 worker.schedule(() -> {
     System.out.println("Start");
     worker.schedule(() -> System.out.println("Inner"));
     System.out.println("End");
-});1234567
+});
 ```
 
 结果：
@@ -364,25 +366,25 @@ worker.schedule(() -> {
 ```
 Start
 End
-Inner123
+Inner
 ```
 
 TrampolineScheduler 把任务安排到第一次执行任务的那个线程中执行。这样，第一次调用 schedule 的操作是阻塞的，直到队列执行完。后续的任务，会在这个线程中一个一个的执行，并且后续的调用不会阻塞。
 
 ### NewThreadScheduler
 
-NewThreadScheduler 给每个任务创建一个新的线程。 
+NewThreadScheduler 给每个任务创建一个新的线程。
 定义一个打印线程信息的辅助函数：
 
-```
+```java
 public static void printThread(String message) {
     System.out.println(message + " on " + Thread.currentThread().getId());
-}123
+}
 ```
 
 示例：
 
-```
+```java
 printThread("Main");
 Scheduler scheduler = Schedulers.newThread();
 Scheduler.Worker worker = scheduler.createWorker();
@@ -392,7 +394,7 @@ worker.schedule(() -> {
     printThread("End");
 });
 Thread.sleep(500);
-worker.schedule(() -> printThread("Again"));12345678910
+worker.schedule(() -> printThread("Again"));
 ```
 
 结果：
