--- a/RxJava系列教程/2.RxJava 教程第一部分：入门之 关键的类.md
+++ b/RxJava系列教程/2.RxJava 教程第一部分：入门之 关键的类.md
@@ -1,4 +1,4 @@
-# 2.RxJava 教程第一部分：入门之 关键的类
+# 2. 入门之关键的类
 
 Rx 有两个最基础的类型，和其他一些扩展这两种类型的类。两个核心的类为： Observable 和 Observer。Subject 是同时继承了 Observable 和 Observer。
 
