--- a/RxJava系列教程/24.RxJava 的 compose 操作函数实战.md
+++ b/RxJava系列教程/24.RxJava 的 compose 操作函数实战.md
@@ -1,3 +1,5 @@
+## 24. RxJava 的 compose 操作函数实战
+
 如果你对 RxJava 还不了解，请参考Intro To RxJava 系列教程，如果你看了其中的自定义操作函数后，认为 compose 操作函数只在自定义操作函数中才需要使用，则 Dan lew 通过这篇文章告诉你，并非如此。 很多情况我们都可以使用 compose 函数。
 
 RxJava 一大特性就是串联调用各种操作函数，这样代码看起来比较整洁，也能清晰的表达代码所要实现的功能，例如：
