--- a/RxJava系列教程/25.不该使用 RxJava 的一些情况.md
+++ b/RxJava系列教程/25.不该使用 RxJava 的一些情况.md
@@ -1,3 +1,5 @@
+## 25. 不该使用 RxJava 的一些情况
+
 Reactive programming 是一种改变游戏规则的技术。如果您正确的使用它，则会改变您的编程方式。一年之前笔者（原文作者，下同）开始接触 RxJava 并尝试使用 RxJava 来处理 UI 事件（并且成为了 [RxJavaFX](https://github.com/ReactiveX/RxJavaFX/) 的管理者）。在使用 RxJava 一段时间后，笔者发现 RxJava 能干很多事。 并且改变了很多编程的方式和方法，从 并发到 IO 以及 业务逻辑和算法。
 
 笔者开始到处使用 RxJava ，只要是可以用的地方就开始使用 RxJava，这样也可以更快的掌握 RxJava 的用法。
@@ -122,17 +124,17 @@ Observable<Category> category = Observable.just(Category.forId(263))
 先解释下上面提到的情况，比如有下面一个 Product 类
 
 ```java
-public final class Product { 
+public final class Product {
     private final int id;
     private final String description;
     private final int categoryId;
 
-    public Product(int id, String description, int categoryId) { 
+    public Product(int id, String description, int categoryId) {
         this.id = id;
         this.description = description;
         this.categoryId = categoryId;
     }
-    public Observable<Category> getCategory() { 
+    public Observable<Category> getCategory() {
         return Category.forId(categoryId);
     }
 }
@@ -143,18 +145,18 @@ public final class Product {
 ```java
 Observable<Product> products = ...
 
-Observable<Product> productsInGroup5 = 
+Observable<Product> productsInGroup5 =
     products.flatMap(p -> p.getCategory().filter(c -> c.getGroup() == 5).map(p -> c));
 ```
 
 如此简单的一个需求，代码看起来居然这么复杂到使用了 FlatMap 。如果 getCategory() 返回的是 category 对象则用起来就相当简单了：
 
 ```java
-public Category getCategory() { 
+public Category getCategory() {
     return Category.forId(categoryId);
 }
 
-Observable<Product> productsInGroup5 = 
+Observable<Product> productsInGroup5 =
     products.filter(p -> p.getCategory().getGroup() == 5);
 ```
 
@@ -165,19 +167,19 @@ Observable<Product> productsInGroup5 =
 RxJava 中的数据通常是无状态的。这样可以方便并行处理多个操作。但是在实际的业务逻辑中，通常需要保留一些状态。比如打印价格时候，需要保留历史价格信息：
 
 ```java
-public final class PricePoint { 
+public final class PricePoint {
     private final int id;
     private final int productId;
     private final BigDecimal price;
     private final ImmutableList<BigDecimal> historicalPricePoints;
 
-    public PricePoint(int id, int productId, BigDecimal price) { 
+    public PricePoint(int id, int productId, BigDecimal price) {
         this.id = id;
         this.productId = productId;
         this.price = price;
         historicalPricePoints = HistoricalPricePoints.forProductId(productId);
     }
-    public ImmutableList<BigDecimal> getHistoricalPricePoints() { 
+    public ImmutableList<BigDecimal> getHistoricalPricePoints() {
         return historicalPricePoints;
     }
 }
@@ -186,17 +188,17 @@ public final class PricePoint {
 然后通过 Observable 的方式来获取历史信息：
 
 ```java
-public final class PricePoint { 
+public final class PricePoint {
     private final int id;
     private final int productId;
     private final BigDecimal price;
 
-    public PricePoint(int id, int productId, BigDecimal price) { 
+    public PricePoint(int id, int productId, BigDecimal price) {
         this.id = id;
         this.productId = productId;
         this.price = price;
     }
-    public Observable<BigDecimal> getHistoricalPricePoints() { 
+    public Observable<BigDecimal> getHistoricalPricePoints() {
         return HistoricalPricePoints.forProductId(productId);
     }
 }
