--- a/RxJava系列教程/26.RxJava 常见的错误用法.md
+++ b/RxJava系列教程/26.RxJava 常见的错误用法.md
@@ -1,3 +1,5 @@
+## 26. RxJava 常见的错误用法
+
 RxJava 用起来很爽，特别是和 retrofit 一起用了请求网络数据。对于大部分初学者呢，都会出现这样的用法：
 
 ```java
@@ -7,7 +9,7 @@ view.setOnClickListener( v -> service.user(name)
   .observeOn(AndroidSchedulers.mainThread())
   .subscribe(System.out::println));
 ```
- 
+
 当点击一个按钮的时候，去请求服务器数据然后使用返回的结果刷新 UI。（比如当前显示用户信息的界面上有个刷新按钮，点击一下就去请求数据并刷新界面）。
 笔者就曾经写过这样的代码。但是经过简单的测试就发现这是有问题的！
 
@@ -30,7 +32,7 @@ view.setOnClickListener( v -> {
     subscriptions.add(sub);
 });
 ```
- 
+
 但是另外两个问题呢？
 这里就要使用 Subject 来转发 View 的onClick 事件了。例如下面使用 PublishSubject：
 
@@ -45,7 +47,7 @@ Subscription sub = subject.flatMap(v-> service.user(name))
             .subscribe(System.out::println);
     subscriptions.add(sub);
 ```
- 
+
 这样可以避免每次点击刷新按钮都创建一个新的 Subscription。
 而第三种情况，可以使用 switchMap 来解决
 
@@ -60,7 +62,7 @@ Subscription sub = subject.switchMap(v-> service.user(name))
             .subscribe(System.out::println);
     subscriptions.add(sub);
 ```
- 
+
 另外为了避免用户快速的点击同一个按钮，则可以使用 throttleFirst 来过滤掉后面一段时间内的点击事件。
 同时如果使用了 RxBinding 和 RxLifecycle 则代码会更加简洁清晰。
 
@@ -82,6 +84,6 @@ RxView.clicks(view)
             }
         });
 ```
- 
+
 上面的代码根据 https://github.com/kaushikgopal/RxJava-Android-Samples/blob/master/app/src/main/java/com/morihacky/android/rxjava/fragments/RetrofitFragment.java 中的代码修改而来，可以把上面的代码插入到 onCreateView 函数的 return 语句之前。同时取消掉 onListContributorsClicked 函数。
 同时 RxJava-Android-Samples 这个项目有 3432 人加星 有 639 人 fork。 说明还是有不少人关注的，但是里面的示例用法还是有不少问题的。所以大家在参考示例项目学习的时候，一定要学会思考，不能直接复制粘贴代码就拿来用了，RxJava-Android-Samples 项目只是告诉 Rxjava 初学者 RxJava 可以这么用，那是具体用的对不对就不一定了！
