--- a/RxJava系列教程/27.RxJava Android 开发全家桶.md
+++ b/RxJava系列教程/27.RxJava Android 开发全家桶.md
@@ -1,3 +1,5 @@
+## 27. RxJava Android 开发全家桶
+
 [RxJava](http://blog.chengyunfeng.com/?p=983) 在 Android 应用开发中越来越流行，但是由于其门槛稍高，初次使用不免遇到很多问题，例如在 [RxJava 常见的错误用法](http://blog.chengyunfeng.com/?p=1010) 和 [不该使用 RxJava 的一些情况](http://blog.chengyunfeng.com/?p=1009) 中所描述的情况。为了避免这些常见的问题，很多民间高手开发了很多在 Android 应用中可以使用的 Rx 扩展类库，组合使用这些类库，可以更方便的使用 RxJava 并且可以避免一些常见的错误用法。 本文来介绍一些使用 RxJava 必备的扩展库。
 
 ### RxAndroid
@@ -23,12 +25,14 @@ myObservable
 ### Retrofit
 
 现在几乎大部分的 Android 应用都需要请求网络获取数据，而 [Retrofit](http://blog.chengyunfeng.com/?p=491) 就是用来简化网络请求的一个库，并且支持 RxJava。比如：
+
 ```java
 @GET("/users/{user}")
 Observable<User> user(@Path("user") String user);
 ```
 
 上面的代码定义了一个 GET 请求，请求的路径是 /users/{user}并且带有一个用户名的参数。 返回的结果为 一个 Observable 。 这样配合前面的 RxBinding，就可以很容易的实现一个 用户点击一个刷新按钮去请求服务器数据的操作。
+
 ```java
 RxView.clicks(view).flatMap(v -> githubService.user(user)).subscribe();
 ```
@@ -38,14 +42,13 @@ RxView.clicks(view).flatMap(v -> githubService.user(user)).subscribe();
 
 除了上面这些主要的类库外，还有一些封装其他 Android 服务的库：
 
-[Rx Preferences](https://github.com/f2prateek/rx-preferences) 通过 RxJava 的方式来访问 SharedPreferences。
-
-[RxPermissions](https://github.com/tbruyelle/RxPermissions) 用于支持 Android M 动态权限申请的库。
+- [Rx Preferences](https://github.com/f2prateek/rx-preferences) 通过 RxJava 的方式来访问 SharedPreferences。
+- [RxPermissions](https://github.com/tbruyelle/RxPermissions) 用于支持 Android M 动态权限申请的库。
 
 还有一些配合 Google Play Service 服务的库：
 
-[RxFit](https://github.com/patloew/RxFit) 封装了 Fitness API 的调用。
-[RxNotification](https://github.com/pucamafra/RxNotification) 封装了 firebase 通知 api。
-[Android-ReactiveLocation](https://github.com/mcharmas/Android-ReactiveLocation) 封装了 Google Play Service API 中和位置相关的 api。
+- [RxFit](https://github.com/patloew/RxFit) 封装了 Fitness API 的调用。
+- [RxNotification](https://github.com/pucamafra/RxNotification) 封装了 firebase 通知 api。
+- [Android-ReactiveLocation](https://github.com/mcharmas/Android-ReactiveLocation) 封装了 Google Play Service API 中和位置相关的 api。
 
 如果您要是开发 Android Wear 应用的话，会使用到 Wearable API 来实现手表和手机直接的数据通信，则可以使用 [RxWear](https://github.com/patloew/RxWear) 库。
