--- a/RxJava系列教程/3.RxJava 教程第一部分：入门之 生命周期管理.md
+++ b/RxJava系列教程/3.RxJava 教程第一部分：入门之 生命周期管理.md
@@ -1,4 +1,4 @@
-# 3.RxJava 教程第一部分：入门之 生命周期管理
+# 3. 入门之生命周期管理
 
 Rx 背后的理念是：无法知道事件流何时发射数据、也不知何时结束发射，但是你需要控制何时开始和结束接受事件。订阅者可能使用了一些资源，这些资源需要在停止接收事件的时候释放。 通过 subscription 可以实现生命周期管理。
 
@@ -15,7 +15,7 @@ Subscription    subscribe(Observer<? super T> observer)
 Subscription    subscribe(Subscriber<? super T> subscriber)
 ```
 
-第一个 subscribe() 函数只是订阅事件，但是不去处理这些事件。带有一个或者多个 Action 参数的，使用这些参数来构造一个 Subscriber 对象。这些参数分别对应 onNext、onError和 onComplete 这三种类型的事件，如果没有提供则代表不处理这个类型的事件。 
+第一个 subscribe() 函数只是订阅事件，但是不去处理这些事件。带有一个或者多个 Action 参数的，使用这些参数来构造一个 Subscriber 对象。这些参数分别对应 onNext、onError和 onComplete 这三种类型的事件，如果没有提供则代表不处理这个类型的事件。
 下面的示例演示处理 error 的情况：
 
 ```java
