--- a/RxJava系列教程/4.RxJava 教程第二部分：事件流基础之 创建事件流.md
+++ b/RxJava系列教程/4.RxJava 教程第二部分：事件流基础之 创建事件流.md
@@ -1,4 +1,4 @@
-# 4.RxJava 教程第二部分：事件流基础之 创建事件流
+# 4. 事件流基础之创建事件流
 
 了解了 Rx 的概念，就要了解怎么创建和操作事件流了。操作事件流的原始实现是基于 C# 的 LINQ，而 LINQ 是受到 functional programming 启发的。如果你了解 LINQ 更容易理解本节内容， 如果不了解也没关系。我们将从最简单的内容开始介绍。 大部分的 Rx 操作函数（operators ）用来操作已经存在的事件流。在介绍操作函数之前，先来看看如何创建一个 Observable。
 
