--- a/RxJava系列教程/5.RxJava 教程第二部分：事件流基础之 过滤数据.md
+++ b/RxJava系列教程/5.RxJava 教程第二部分：事件流基础之 过滤数据.md
@@ -1,4 +1,4 @@
-# 5.RxJava 教程第二部分：事件流基础之 过滤数据
+## 5.事件流基础之过滤数据
 
 现在你可以用 Rx 来处理大批量实时数据，但是如果把所有大批量数据整个打包发给你的话，使用 Rx 还有啥优势呢？ 本节 我们将介绍一些操作函数（operators ）来过滤数据、或者把所有数据变成一个需要的数据。
 
