--- a/RxJava系列教程/18.RxJava 教程第四部分：并发 之测试.md
+++ b/RxJava系列教程/18.RxJava 教程第四部分：并发 之测试.md
@@ -2,9 +2,9 @@
 
 在同步的 Rx 中测试和普通 Java 中的单元测试没有太大的区别。如果要测试异步代码，可能会有点需要注意的地方，比如要测试下面的代码：
 
-```
+```java
 Observable.interval(1, TimeUnit.SECONDS)
-    .take(5)12
+    .take(5)
 ```
 
 上面的 Observable 发射一个数据流，需要 5秒 来发射完所有的数据。如果我们使用自动化测试这个代码，则是不是意味着测试代码也要执行 5秒，如果我们有成千上万个这样的测试，测试将消耗很多时间去完成。
@@ -19,7 +19,7 @@ TestScheduler 和前面一节介绍的线程调度功能是一样的。调度的
 
 advanceTimeTo 函数就是把 TestScheduler 中的时钟前进指定的时间刻度。
 
-```
+```java
 TestScheduler s = Schedulers.test();
 
 s.createWorker().schedule(
@@ -41,7 +41,7 @@ System.out.println("Virtual time: " + s.now());
 
 System.out.println("Advancing to 40s");
 s.advanceTimeTo(40, TimeUnit.SECONDS);
-System.out.println("Virtual time: " + s.now());12345678910111213141516171819202122
+System.out.println("Virtual time: " + s.now());
 ```
 
 结果：
@@ -55,7 +55,7 @@ Virtual time: 10000
 Advancing to 40s
 20s
 40s
-Virtual time: 40000123456789
+Virtual time: 40000
 ```
 
 上面示例中创建的 3 个任务，第一个任务立刻执行，第二个和第三个在将来执行。可以看到如果不调用 advanceTimeTo 来使时间前进，则所有任务都不会执行，因为在 TestScheduler 中时间是停止的。当时间前进的时候， TestScheduler 会同步执行所有满足时间条件的任务。
@@ -66,7 +66,7 @@ advanceTimeTo 可以设置时间为任意时刻。也可以回到过去（设置
 
 advanceTimeBy 顾名思义，在当前时间基础上前进多少。
 
-```
+```java
 TestScheduler s = Schedulers.test();
 
 s.createWorker().schedule(
@@ -88,7 +88,7 @@ System.out.println("Virtual time: " + s.now());
 
 System.out.println("Advancing by 40s");
 s.advanceTimeBy(40, TimeUnit.SECONDS);
-System.out.println("Virtual time: " + s.now());12345678910111213141516171819202122
+System.out.println("Virtual time: " + s.now());
 ```
 
 结果：
@@ -102,14 +102,14 @@ Virtual time: 10001
 Advancing by 40s
 20s
 40s
-Virtual time: 50001123456789
+Virtual time: 50001
 ```
 
 ### triggerActions
 
 triggerActions 不会修改时间。只是用来执行当前可以调度的任务。
 
-```
+```java
 TestScheduler s = Schedulers.test();
 
 s.createWorker().schedule(
@@ -119,7 +119,7 @@ s.createWorker().schedule(
         20, TimeUnit.SECONDS);
 
 s.triggerActions();
-System.out.println("Virtual time: " + s.now());12345678910
+System.out.println("Virtual time: " + s.now());
 ```
 
 结果：
@@ -133,7 +133,7 @@ Virtual time: 012
 
 有些任务可能在同一时刻执行。如果发生这种情况，则被称之为 调度冲突。 这些任务调度的顺序就是他们执行的顺序（也就是按照顺序执行）
 
-```
+```java
 TestScheduler s = Schedulers.test();
 
 s.createWorker().schedule(
@@ -146,7 +146,7 @@ s.createWorker().schedule(
         () -> System.out.println("Third"),
         20, TimeUnit.SECONDS);
 
-s.advanceTimeTo(20, TimeUnit.SECONDS);12345678910111213
+s.advanceTimeTo(20, TimeUnit.SECONDS);
 ```
 
 结果：
@@ -154,14 +154,14 @@ s.advanceTimeTo(20, TimeUnit.SECONDS);12345678910111213
 ```
 First
 Second
-Third123
+Third
 ```
 
 ### 测试
 
 Rx 的 Observable的 大部分操作函数都有一个可以指定 Scheduler 的重载形式。在这些函数上同样可以使用 TestScheduler。
 
-```
+```java
 @Test
 public void test() {
     TestScheduler scheduler = new TestScheduler();
@@ -174,7 +174,7 @@ public void test() {
     assertTrue(result.isEmpty());
     scheduler.advanceTimeBy(5, TimeUnit.SECONDS);
     assertTrue(result.equals(expected));
-}12345678910111213
+}
 ```
 
 这样测试代码就可以很开的完成，比较适合测试简短的 Rx 代码。在实际代码中，可以把获取 Scheduler 的函数封装起来，在 debug 版本中使用 TestScheduler ，而在发布版本中使用真实的 Scheduler。
@@ -183,7 +183,7 @@ public void test() {
 
 上面的测试中，我们手工的收集发射的数据并根据期望的数据去对比，来判断测试是否成功。由于这样的测试很常见，Rx 提供了一个 TestSubscriber 来帮助简化测试过程。 前面的测试代码使用 TestSubscriber 可以变为这样：
 
-```
+```java
 @Test
 public void test() {
     TestScheduler scheduler = new TestScheduler();
@@ -196,7 +196,7 @@ public void test() {
     assertTrue(subscriber.getOnNextEvents().isEmpty());
     scheduler.advanceTimeBy(5, TimeUnit.SECONDS);
     subscriber.assertReceivedOnNext(expected);
-}12345678910111213
+}
 ```
 
 TestSubscriber 不仅仅只收集数据，还有如下一些函数：
@@ -205,7 +205,7 @@ TestSubscriber 不仅仅只收集数据，还有如下一些函数：
 java.lang.Thread getLastSeenThread()
 java.util.List<Notification<T>> getOnCompletedEvents()
 java.util.List<java.lang.Throwable> getOnErrorEvents()
-java.util.List<T> getOnNextEvents()1234
+java.util.List<T> getOnNextEvents()
 ```
 
 有两点需要额外注意：
@@ -215,19 +215,19 @@ java.util.List<T> getOnNextEvents()1234
 
 TestSubscriber 还提供了一些常见的判断函数：
 
-```
+```java
 void assertNoErrors()
 void assertReceivedOnNext(java.util.List<T> items)
 void assertTerminalEvent()
-void assertUnsubscribed()1234
+void assertUnsubscribed()
 ```
 
 另外还可以阻塞直到特定的事件发生：
 
-```
+```java
 void awaitTerminalEvent()
 void awaitTerminalEvent(long timeout, java.util.concurrent.TimeUnit unit)
-void awaitTerminalEventAndUnsubscribeOnTimeout(long timeout, java.util.concurrent.TimeUnit unit)123
+void awaitTerminalEventAndUnsubscribeOnTimeout(long timeout, java.util.concurrent.TimeUnit unit)
 ```
 
 指定时间可能会导致超时的异常（没有在规定的时间内完成）。
