--- a/RxJava系列教程/16.RxJava 教程第三部分：驯服数据流之自定义操作函数.md
+++ b/RxJava系列教程/16.RxJava 教程第三部分：驯服数据流之自定义操作函数.md
@@ -73,7 +73,7 @@ subscribe(
             firstOperator(source))))
 ```
 
-这样我们在倒着处理数据流！ (^o^)/~
+这样我们在倒着处理数据流！
 
 ### 把操作函数串联起来
 
@@ -197,7 +197,7 @@ compose 的参数为一个函数，该函数把一个 Observable 转换为另外
 public final <R> Observable<R> lift(Observable.Operator<? extends R,? super T> lift)
 ```
 
-Observable.Operator<R,T> 是 Func1<Subscriber<? super R>,Subscriber<? super T>> 的变体， 是一个函数用来把一个 Subscriber 转换为 Subscriber。直接和 Subscriber 打交道可以避免访问 Observable。 lift 函数自动创建 Observable 并订阅。
+Observable.Operator&lt;R,T> 是 Func1&lt;Subscriber<? super R>,Subscriber<? super T>> 的变体， 是一个函数用来把一个 Subscriber 转换为 Subscriber。直接和 Subscriber 打交道可以避免访问 Observable。 lift 函数自动创建 Observable 并订阅。
 
 如果你研究一下这个函数，可以发现好像这个函数是倒着声明的：为了把 Observable 转换为 Observable，需要一个函数把 Subscriber 转换为 Subscriber。 为什么会这样呢？ 还记得一个订阅者在串联调用的末尾订阅的，然后传递给源 Observable。也就是说， Subscription 是倒着操作的。每个操作函数收到一个 Subscription，并使用这个 Subscription 来创建一个新的 Subscription 来处理这个操作。
 
@@ -240,6 +240,7 @@ class MyMap<T,R> implements Observable.Operator<R, T> {
 ```
 
 map 操作函数需要一个参数把 T 转换为 R。上面 的实现中，transformer 干了这件事。关键点在于 call 函数的调用。我们收到了一个 Subscriber对象，该对象需要一个 R 类型数据。我们为个 Subscriber 创建了一个Subscriber 对象，并把 T 转换为 R 类型数据然后发射给 Subscriber。 lift 操作函数处理接受 Subscriber 的模板代码，并且使用 Subscriber 订阅到源 Observable上。
+
 使用 Observable.Operator 和使用 Observable.Transformer 一样简单：
 
 ```java
