--- a/RxJava系列教程/17.RxJava 教程第四部分：并发 之线程调度.md
+++ b/RxJava系列教程/17.RxJava 教程第四部分：并发 之线程调度.md
@@ -1,4 +1,4 @@
-## 17.RxJava 教程第四部分：并发 之线程调度
+## 17. 并发 之线程调度
 
 由于 Rx 目标是用在异步系统上并且 Rx 支持多线程处理，所以很多 Rx 开发者认为默认情况下 Rx 就是多线程的。 其实实际情况不是这样的，Rx 默认是单线程的。
 
