--- a/RxJava系列教程/2.RxJava 教程第一部分：入门之 关键的类.md
+++ b/RxJava系列教程/2.RxJava 教程第一部分：入门之 关键的类.md
@@ -20,7 +20,7 @@ public final Subscription subscribe(Subscriber<? super T> subscriber)
 
 该函数是用来接收 observable 发射的事件的。当事件被发射后，他们就丢给了 subscriber， subscriber 是用来处理事件的实现。这里的 Subscriber 参数实现了 Observer 接口。
 
-一个 Observable 发射 三种类型的事件：
+一个 Observable 发射三种类型的事件：
 
 - Values （数据）
 - 完成状态，告诉 Subscriber 事件（数据） 发射完毕，没有其他数据了
@@ -52,9 +52,9 @@ interface Observer<T> {
 
 ## Subject
 
-Subject 是 Observable 的一个扩展，同时还实现了 Observer 接口。第一眼看上去可能有点奇怪，但是在有些场合下使用 Subject 将会非常便捷。他们可以像 Observer 一样接收事件，同时还可以像 Observable 一样把接收到的事件再发射出去。这种特性非常适合 Rx 中的接入点，当你的事件来至于 Rx 框架之外的代码的时候，你可以把这些数据先放到 Subject 中，然后再把 Subject转换为一个 Observable，就可以在 Rx 中使用它们了。你可以把 Subject 当做 Rx 中的 事件管道。
+Subject 是 Observable 的一个扩展，同时还实现了 Observer 接口。第一眼看上去可能有点奇怪，但是在有些场合下使用 Subject 将会非常便捷。他们可以像 Observer 一样接收事件，同时还可以像 Observable 一样把接收到的事件再发射出去。这种特性非常适合 Rx 中的接入点，当你的事件来自于 Rx 框架之外的代码的时候，你可以把这些数据先放到 Subject 中，然后再把 Subject 转换为一个 Observable，就可以在 Rx 中使用它们了。你可以把 Subject 当做 Rx 中的 事件管道。
 
-Subject 有两个参数类型：输入参数和输出参数。这样设计是为了抽象而不是应为使用 Subject 是为了转换数据类型。转换数据应该使用转换操作函数来完成，后面我们将介绍各种操作函数。
+Subject 有两个参数类型：输入参数和输出参数。这样设计是为了抽象而不是因为使用 Subject 是为了转换数据类型。转换数据应该使用转换操作函数来完成，后面我们将介绍各种操作函数。
 
 Subject 有各种不同的具体实现。下面将介绍一些非常重要的实现以及他们之间的区别。
 
