--- a/RxJava系列教程/5.RxJava 教程第二部分：事件流基础之 过滤数据.md
+++ b/RxJava系列教程/5.RxJava 教程第二部分：事件流基础之 过滤数据.md
@@ -1,9 +1,10 @@
-## 5.事件流基础之过滤数据
+## 5. 事件流基础之过滤数据
 
-现在你可以用 Rx 来处理大批量实时数据，但是如果把所有大批量数据整个打包发给你的话，使用 Rx 还有啥优势呢？ 本节 我们将介绍一些操作函数（operators ）来过滤数据、或者把所有数据变成一个需要的数据。
+现在你可以用 Rx 来处理大批量实时数据，但是如果把所有大批量数据整个打包发给你的话，使用 Rx 还有啥优势呢？本节我们将介绍一些操作函数（operators ）来过滤数据、或者把所有数据变成一个需要的数据。
 
-如果你了解过函数式编程（functional programming）或者 Java 中的 Stream，则本节介绍的操作函数是非常眼熟的。本节中所有的操作符都返回一个不影响前一个 Observable 的新 Observable。 整个 Rx 框架都遵守该原则。通过创建新的 Observable 来转换之前的 Observable而不会对之前的 Observable 造成干扰。订阅到初始 Observable 的 Subscribers 不会受到任何影响，但是在后面的章节中也会看到，开发者也需要当心该原则。
-Marble diagrams（弹子图）
+如果你了解过函数式编程（functional programming）或者 Java 中的 Stream，则本节介绍的操作函数是非常眼熟的。本节中所有的操作符都返回一个不影响前一个 Observable 的新 Observable。 整个 Rx 框架都遵守该原则。通过创建新的 Observable 来转换之前的 Observable 而不会对之前的 Observable 造成干扰。订阅到初始 Observable 的 Subscribers 不会受到任何影响，但是在后面的章节中也会看到，开发者也需要当心该原则。
+
+### Marble diagrams（弹子图）
 
 你可以想象一个机器，不停的发射弹子出来，发射出来的弹子可以被其他模块再次加工（比如 上色、把不合格的弹子给回收了），加工完成后再次发射出来 … 弹子图就是对这个机器的抽象描述。在 Rx 中流行使用这种方式来描述操作符，毕竟图片看起来直观多了。 Marble diagrams（弹子图）基本元素如下：
 
@@ -28,7 +29,6 @@ Subscription oddNumbers = values
         e -> System.out.println("Error: " + e),
         () -> System.out.println("Completed")
     );
-
 ```
 
 输出结果如下：
@@ -65,7 +65,6 @@ Subscription subscription = values
         e -> System.out.println("Error: " + e),
         () -> System.out.println("Completed")
     );
-
 ```
 
 输出结果如下：
@@ -75,10 +74,9 @@ Subscription subscription = values
 2
 3
 Completed
-
 ```
 
-distinct 还有一个重载函数，该函数有个生成 key 的参数。每个发射的数据都使用该参数生成一个 key，然后使用该key 来判断数据是否一样。
+distinct 还有一个重载函数，该函数有个生成 key 的参数。每个发射的数据都使用该参数生成一个 key，然后使用该key来判断数据是否一样。
 
 ```java
 public final <U> Observable<T> distinct(Func1<? super T,? extends U> keySelector)
@@ -120,7 +118,7 @@ Completed
 
 “Fourth” 和 “Fifth” 字符串被过滤掉了，应为他们的 key （首字母）和 First 一样。已经发射过的数据将被过滤掉。
 
-有经验的码农知道，该函数在内部维护一个 key 集合来保存所有已经发射数据的 key，当有新的数据发射的时候，在集合中查找该 数据的key 是否存在。 在使用 Rx 操作函数的时把内部细节给封装起来了，但是我们应该注意该问题来避免性能问题。（如果有大量的数据，维护一个内部的集合来保存 key 可能会占用很多内存。）
+有经验的码农知道，该函数在内部维护一个 key 集合来保存所有已经发射数据的 key，当有新的数据发射的时候，在集合中查找该数据的 key 是否存在。 在使用 Rx 操作函数的时把内部细节给封装起来了，但是我们应该注意该问题来避免性能问题。（如果有大量的数据，维护一个内部的集合来保存 key 可能会占用很多内存。）
 
 distinct 还有个变体是 distinctUntilChanged。区别是 distinctUntilChanged 只过滤相邻的 key 一样的数据。
 
@@ -225,7 +223,6 @@ ignoreElements() 和使用 filter(v -> false) 是一样的效果。
 
 ```java
 Observable<T>   take(int num)
-
 ```
 
 ![RxJava](images/过滤数据_06.png)
