--- a/RxJava系列教程/6.RxJava 教程第二部分：事件流基础之 检查数据.md
+++ b/RxJava系列教程/6.RxJava 教程第二部分：事件流基础之 检查数据.md
@@ -1,4 +1,4 @@
-## 事件流基础之检查数据
+## 6. 事件流基础之检查数据
 
 Inspection 检查数据是否符合某一条件
 
@@ -38,7 +38,7 @@ true
 Completed
 ```
 
-all 函数返回的是一个发射一个 布尔值的 Observable，而不是直接返回一个 布尔值。原因在于我们并不知道源 Observable 何时才结束数据流的发射，只有当源 Observable 发射结束的时候， all 函数才知道结果是否都满足条件。只要遇到一个不满足条件的数据，all 函数就立刻返回 false。 只有当源 Observable 结束发射并且所发射的所有数据都满足条件的时候才会产生 true。在 observable 内返回结果可以方便的实现非阻塞操作。 在下个示例中可以看到 all 在遇到不满足的数据的时候就立刻结束了。
+all 函数返回的是一个发射一个布尔值的 Observable，而不是直接返回一个布尔值。原因在于我们并不知道源 Observable 何时才结束数据流的发射，只有当源 Observable 发射结束的时候， all 函数才知道结果是否都满足条件。只要遇到一个不满足条件的数据，all 函数就立刻返回 false。 只有当源 Observable 结束发射并且所发射的所有数据都满足条件的时候才会产生 true。在 observable 内返回结果可以方便的实现非阻塞操作。 在下个示例中可以看到 all 在遇到不满足的数据的时候就立刻结束了。
 
 ```java
 Observable<Long> values = Observable.interval(150, TimeUnit.MILLISECONDS).take(5);
@@ -188,8 +188,7 @@ Completed
 
 ### contains
 
-contains 使用 Object.equals 函数来判断源 Observable 是否发射了相同的数据。
-只要遇到相同的数据，则 contains 就立刻返回。
+contains 使用 Object.equals 函数来判断源 Observable 是否发射了相同的数据。只要遇到相同的数据，则 contains 就立刻返回。
 
 ![RxJava](images/检查数据_03.png)
 
@@ -333,7 +332,7 @@ Completed
 
 上面使用了自定义的比较函数，所以结果是一样的。 如果不指定自定义的 比较函数的话， 使用默认的 Object.equals 来比较，则返回的结果就是 False 了。
 
-如果一个源 Observable 出现了 错误，则 比较结果的 Observable 也会出现 错误并结束。
+如果一个源 Observable 出现了错误，则比较结果的 Observable 也会出现错误并结束。
 
 ```java
 Observable<Integer> values = Observable.create(o -> {
