--- a/RxJava系列教程/9.RxJava 教程第三部分：驯服数据流之副作用.md
+++ b/RxJava系列教程/9.RxJava 教程第三部分：驯服数据流之副作用.md
@@ -1,6 +1,6 @@
 # 9. 驯服数据流之副作用
 
-前面两部分，我们学习到了如何创建 Observable以及如何从 Observable 中获取数据。本部分将介绍一些更高级的用法，以及一些在大型项目中的最佳实践。
+前面两部分，我们学习到了如何创建 Observable 以及如何从 Observable 中获取数据。本部分将介绍一些更高级的用法，以及一些在大型项目中的最佳实践。
 
 ## Side effects（副作用）
 
@@ -10,7 +10,7 @@
 
 ### 副作用的问题
 
-Functional programming 通常避免副作用。带有副作用的函数（尤其是可以修改参数状态的）要求开发者了解跟多实现的细节。增加了函数的复杂度并且导致函数被错误理解和使用，并且难以维护。副作用有故意的和无意的。可以通过封装或者使用不可变对象来避免副作用。有一些明智的封装规则可以显著的提高你 Rx 代码的可维护性。
+Functional programming 通常避免副作用。带有副作用的函数（尤其是可以修改参数状态的）要求开发者了解更多实现的细节。增加了函数的复杂度并且导致函数被错误理解和使用，并且难以维护。副作用有故意的和无意的。可以通过封装或者使用不可变对象来避免副作用。有一些明智的封装规则可以显著的提高你 Rx 代码的可维护性。
 
 我们使用一个带有副作用的示例来演示。 Java 中不可以在 Lambda 或者 匿名函数中引用外层的非 final 变量。 但是 Java 中的 final 变量只是保证了该编译引用的对象地址不变，但是对象本身的状态还是可以改变的。例如，下面是一个用来计数的一个类：
 
@@ -236,7 +236,7 @@ Subscription over
 
 ## 使用 AsObservable 函数来封装
 
-Rx 使用面向对象的 Java 语言来实现 functional programming 风格编码。 需要注意 面向对象中的问题。 例如下面一个天真版的返回 observable 的服务：
+Rx 使用面向对象的 Java 语言来实现 functional programming 风格编码。 需要注意面向对象中的问题。 例如下面一个天真版的返回 observable 的服务：
 
 ```java
 public class BrakeableService {
