修改贴图错误的bug

--- a/RxJava系列教程/14.RxJava 教程第三部分：驯服数据流之 时间平移.md
+++ b/RxJava系列教程/14.RxJava 教程第三部分：驯服数据流之 时间平移.md
@@ -83,7 +83,7 @@ Observable.interval(100, TimeUnit.MILLISECONDS)
 [9]
 ```
 
-上面这个示例中，发射了很多空的数据。这是应为，发射了2个数据后，达到了数目缓冲的要求，就触发了一次发射数据的操作，然后过了几十毫秒又触发了时间缓冲的条件，这个时候还没有新的数据发射，所以就触发一个空的列表发射出来。
+上面这个示例中，发射了很多空的数据。这是因为，发射了2个数据后，达到了数目缓冲的要求，就触发了一次发射数据的操作，然后过了几十毫秒又触发了时间缓冲的条件，这个时候还没有新的数据发射，所以就触发一个空的列表发射出来。
 
 ### buffer with signal
 
@@ -262,9 +262,9 @@ Observable.interval(100, TimeUnit.MILLISECONDS)
 
 如果修改为 .takeLastBuffer(1, 200, TimeUnit.MILLISECONDS)，则返回的结果为 [4]
 
-### Delay 延时
+## Delay 延时
 
-顾名思义，delay 操作会延时一段时间再发射数据。有两种方式实现这个效果；一是缓存这些数据，等一段时间后再发射；或者是把Subscriber 订阅的时间延迟。
+顾名思义，delay 操作会延时一段时间再发射数据。有两种方式实现这个效果；一是缓存这些数据，等一段时间后再发射；或者是把 Subscriber 订阅的时间延迟。
 
 ### delay
 
