--- a/RxJava系列教程/1.RxJava 教程第一部分：入门之 Why Rx.md
+++ b/RxJava系列教程/1.RxJava 教程第一部分：入门之 Why Rx.md
@@ -1,4 +1,4 @@
-## 入门之 Why Rx
+## 1. 入门之 Why Rx
 
 > 用户希望查看实时的数据，他们现在就要看最新的微博；他们的订单立刻就被确认；价格需要现在定下；在线游戏需要及时响应。作为码农，你需要发送并忘记的（ fire-and-forget ）消息。你不希望发送一个消息然后阻塞等待结果返回。当结果返回的时候，你希望结果推送给你。当处理的结果是一个集合数据的时候，你更希望逐个的接收到每个结果；你不希望等待整个结果集合都完成后一起返回。世界已经进步到推送的情景了；用户期待我们能跟上他们的步伐。码农有工具来推送数据了，推送数据很简单。码农需要工具来响应推送的数据。
 
