--- a/RxJava系列教程/21.Intro To RxJava 系列教程 总结.md
+++ b/RxJava系列教程/21.Intro To RxJava 系列教程 总结.md
@@ -2,15 +2,15 @@
 
 Intro To RxJava 系列教程一共四个部分，第一部分介绍了为什么要使用 RxJava以及 RxJava的关键概念：
 
-- [RxJava 教程第一部分：入门之 Why Rx](http://blog.chengyunfeng.com/?paged=3#ixzz47aciByu5)
-- [RxJava 教程第一部分：入门之 关键的类](http://blog.chengyunfeng.com/?paged=3#ixzz47adIP58P)
-- [RxJava 教程第一部分：入门之 生命周期管理](http://blog.chengyunfeng.com/?paged=3#ixzz47adP8P9J)
+- [RxJava 教程第一部分：入门之 Why Rx](1.RxJava 教程第一部分：入门之 Why Rx.md)
+- [RxJava 教程第一部分：入门之 关键的类](2.RxJava 教程第一部分：入门之 关键的类.md)
+- [RxJava 教程第一部分：入门之 生命周期管理](3.RxJava 教程第一部分：入门之 生命周期管理.md)
 
 如果看完第一部分对于为什么要使用 RxJava 和 何时使用 RxJava 还不太明白的，可以参考 RxJava 前传：
 
-- [RxJava 前传 1](http://blog.chengyunfeng.com/?p=729)
-- [RxJava 前传 2](http://blog.chengyunfeng.com/?p=731)
-- [RxJava 前传 3](http://blog.chengyunfeng.com/?p=732)
+- [RxJava 前传 1](28.RxJava 前传 1.md)
+- [RxJava 前传 2](29.RxJava 前传 2.md)
+- [RxJava 前传 3](30.RxJava 前传 3.md)
 
 通过第一部分，可以了解到 RxJava 其实主要应用了观察者模式的理念。在 RxJava 中主要干4件事：一、Observable 用来生产数据并把数据丢给观察者；二、Observer 用来处理 Observable 生产的数据；三、在数据从生产者到消费者的过程中，数据可以被再加工；四、可以指定在那个线程中加工数据和消费数据。
 
