--- a/RxJava系列教程/27.RxJava Android 开发全家桶.md
+++ b/RxJava系列教程/27.RxJava Android 开发全家桶.md
@@ -52,3 +52,7 @@ RxView.clicks(view).flatMap(v -> githubService.user(user)).subscribe();
 - [Android-ReactiveLocation](https://github.com/mcharmas/Android-ReactiveLocation) 封装了 Google Play Service API 中和位置相关的 api。
 
 如果您要是开发 Android Wear 应用的话，会使用到 Wearable API 来实现手表和手机直接的数据通信，则可以使用 [RxWear](https://github.com/patloew/RxWear) 库。
+
+### [RxBus](https://github.com/AndroidKnife/RxBus)
+
+Event Bus By RxJava
